<resources>
    <string name="app_name">Vet and Aid</string>
    <string name="app_logo">App logo</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="tab_text_1">Client</string>
    <string name="tab_text_2">Vet</string>
    <string name="tab_text_3">Other</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="button_for_next_page">button for next page</string>
    <string name="registration_number">Registration number</string>
    <string name="clinic_name">Clinic/Shop name</string>
    <string name="personal_data">Personal data:</string>
    <string name="address">Address</string>
    <string name="log_in_data">Log in data:</string>
    <string name="pet_image">pet image</string>
    <string name="species">Species:</string>
    <string name="breed">Breed:</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="editPic">Edit picture…</string>
    <string name="birthdate">Birthdate:</string>
    <string name="unknown">Unknown</string>
    <string name="newPet">Add a new pet:</string>
    <string name="newMedHist">Add medical history:</string>
    <string name="description">Description:</string>
    <string name="treat">Treatment:</string>
    <string name="chatMessage1">No chats yet. Go to the Clinics section and start a conversation!</string>
    <string name="chatMessage2">No chats yet. Wait for a client to start a conversation!</string>
    <string name="noAppointments">No appointments yet. Wait for a client to make one!</string>
    <string name="noAppointments2">No appointments yet. Go to the Clinics section to make one!</string>
    <string name="noPets">No pets treated yet. Wait for a client to make an appointment!</string>
    <string name="pet_picture">Pet picture:</string>
    <string name="choose_breed">Choose breed</string>
    <string name="select_file">Select file</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="display_name">%1$s %2$s</string>
    <string name="problem">Problem: %1$s</string>
    <string name="period">Date: %1$s</string>
    <string name="treatment">Treatment: %1$s</string>
    <string name="fullName">%1$s %2$s</string>
    <string name="time">%1$s:%2$s</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="clinic">Clinic: %1$s</string>
    <string name="pet">Pet: %1$s</string>
    <string name="address2">Address: %1$s</string>
    <string name="info">info</string>
    <string name="delete">Delete</string>

    <string-array name="species">
        <item>Choose…</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Fish</item>
        <item>Rabbit</item>
        <item>Rodent</item>
        <item>Hedgehog</item>
        <item>Bird</item>
        <item>Snake</item>
        <item>Lizard</item>
        <item>Turtle</item>
    </string-array>

    <string-array name="hours">
        <item>00:00</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="addbutton">addButton</string>

    <string name="google_maps_key" translatable="false">AIzaSyDCh6AgMqKDgzrxf-gRMSaS_wOQm4YWlrw</string>

</resources>