<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vetandaid.ui.pets.PetsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_pets" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.vetandaid.ui.chat.ChatFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.vetandaid.ui.clinics.ClinicsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_clinics" />
</navigation>